--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav id="menu">
             <ul>
-                <li><a href="#video" class="link"><span class="material-symbols-outlined">home</span></a></li>
+             <li><a href="#video" class="link"><span class="material-symbols-outlined">home</span></a></li>
                 <li><a href="#skills"class="link" ><span class="material-symbols-outlined">network_intelligence</span></a></li>
                 <li><a href="#formacao" class="link"><span class="material-symbols-outlined">school</span></a></li>
                 <li><a href="#projetos" class="link"><span class="material-symbols-outlined">construction</span></a></li>
@@ -25,22 +25,19 @@
     </header>
     <main>
         <section id="ficha">
-             <img src="imagens/guanabara-perfil.jpg" alt="" class="foto">
-                <h1>Gustavao Ganabara</h1>  
+             <img src="imagens/ariel.jpg" alt="" class="foto">
+                <h1>Ariel S. Paixão</h1>  
                 <p>
-                    Formado em ciencia de computação, com especialização em docencia superior, desenvolvedor web e inteligência artificial. Apixonado por tecnologia e inovação, sempre em busca de novos desafios. Atualmente, autor como professor e desenvolvedor, compartilhando conhecimento atraves de cursos online e projetos de codigo aberto.
+                    Estudante de engenharia de software.Eu sou um desenvolvedor web freelancer com foco em ajudar empresas a estabelecerem ou melhorarem sua presença online. Eu me especializo em criar sites personalizados e responsivos que não apenas parecem ótimos, mas também geram resultados de negócios. Meu objetivo é simplificar o processo tecnológico para que você possa focar no seu negócio enquanto eu cuido da parte técnica.
                 </p>
                 <div id="social">
-                    <a href="https://linkedin.com/in/guanabara/"><span class="material-symbols-outlined">game_button_l</span></a>
+                    <!--<a href="https://linkedin.com/in/guanabara/"><span class="material-symbols-outlined">game_button_l</span></a>-->
 
-                    <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf"><span class="material-symbols-outlined">share</span></a>
+                    <a href="https://github.com/Ariel0707"><span class="material-symbols-outlined">share</span></a>
 
-                    <a href="https://www.instagram.com/gustavoguanabara/#"><span class="material-symbols-outlined">camera</span></a>
+                    <a href="https://www.instagram.com/ariel_sp_web?igsh=amZuOW1heTFrdDY3"><span class="material-symbols-outlined">camera</span></a>
 
-                    <a href="https://www.youtube.com/watch?v=uSWyhKUhhno&list=PLHz_AreHm4dn1bAtIJWFrugl5z2Ej_52d&index=39"><span class="material-symbols-outlined">youtube_activity</span>
-                    </a>
-
-                    <a href="https://www.cursoemvideo.com/"><span class="material-symbols-outlined">language</span></a>
+                    <a href="https://ariel0707.github.io/ariel0707/"><span class="material-symbols-outlined">language</span></a>
                 </div>
         </section>
         <section id="detalhes">
