--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav id="menu">
             <ul>
-             <li><a href="#skills" class="link"><span class="material-symbols-outlined">home</span></a></li>
+             <li><a href="#ficha" class="link"><span class="material-symbols-outlined">home</span></a></li>
                 <li><a href="#skills"class="link" ><span class="material-symbols-outlined">network_intelligence</span></a></li>
                 <li><a href="#formacao" class="link"><span class="material-symbols-outlined">school</span></a></li>
                 <li><a href="#projetos" class="link"><span class="material-symbols-outlined">construction</span></a></li>
